resources/dremio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dremio
  labels:
    monitoring: prometheus
